src/test/ui/coherence/coherence-pair-covered-uncovered-1.old.stderr
error[E0210]: type parameter `T` must be used as the type parameter for some local type (e.g., `MyStruct<T>`)
  --> $DIR/coherence-pair-covered-uncovered-1.rs:15:1
   |
LL | impl<T, U> Remote1<Pair<T, Local<U>>> for i32 { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type parameter `T` must be used as the type parameter for some local type
   |
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0210`.
